<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">scaffold</string>

    <string name="click_again_to_exit">再按一次退出程序</string>
    <string name="navi_home">首页</string>
    <string name="navi_discover">发现</string>
    <string name="navi_store">商城</string>
    <string name="navi_profile">我的</string>

    <string name="skip">跳过</string>
    <string name="start_slogan">开启精彩生活</string>

    <string name="permission_des_full">亲爱的用户：\n\n感谢您使用我们的产品，为了您可以正常使用应用服务，需要使用联网、IMEI、读写联系人、读写外部储存权限，可能会产生移动数据流量，流量费用详情，请咨询当地运营商。本软件除特殊说明的资源，其他资源由第三方提供。使用之前，需要您同意《用户协议》和《隐私政策》，点击同意，即表示您同意上述内容。</string>
    <string name="p_agreement">《用户协议》</string>
    <string name="p_privacy">《隐私政策》</string>
    <string name="go_setting">去设置</string>
    <string name="dialog_message_temp">绝大多数情况下，DNS 记录是不变的，这样的方案根本不会影响正常使用</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy">隐私政策</string>
    <string name="notify">提示</string>
    <string name="welcome_to_use">欢迎使用</string>
    <string name="allow">同意</string>
    <string name="login">登录</string>
    <string name="pls_input_phone_number">Please input phone number</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="login_by_account">账号登录</string>
    <string name="register">注册</string>
    <string name="pls_input_password">请输入密码</string>
    <string name="pls_verification_code">请输入验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="pls_input_msg_code">请输入验证码</string>
    <string name="resend_msg_code">重新发送</string>
    <string name="msg_code_has_sent">验证码已发送至 %1$s</string>
    <string name="msg_code_has_been_sent">Verification Code has been sent</string>
    <string name="msg_code_countdown">%1$d后重新获取</string>
    <string name="msg_code_login">验证码登录</string>
    <string name="phone_invalid">号码不合法</string>
    <string name="get_msg_code_failed">获取验证码失败</string>
    <string name="account_not_exist">账号不存在</string>
    <string name="account_not_exist_and_to_register">账号不存在，去注册？</string>
    <string name="notice">提示</string>
    <string name="login_failed">登录失败</string>
    <string name="password_too_short">密码太短</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="reset_password_success">重置密码成功</string>
    <string name="reset_password">重置密码</string>
    <string name="reset_password_failed">重置密码失败</string>
</resources>