<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navi_home"
        android:category="@string/navi_home"
        android:icon="@drawable/ic_navi_home_selector"
        android:title="@string/navi_home" />

    <item
        android:id="@+id/navi_discover"
        android:category="@string/navi_discover"
        android:icon="@drawable/ic_navi_discover_selector"
        android:title="@string/navi_discover" />

    <item
        android:id="@+id/navi_store"
        android:category="@string/navi_store"
        android:icon="@drawable/ic_navi_store_selector"
        android:title="@string/navi_store" />

    <item
        android:id="@+id/navi_profile"
        android:category="@string/navi_profile"
        android:icon="@drawable/ic_navi_profile_selector"
        android:title="@string/navi_profile" />

</menu>
