<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        style="@style/Widget.Dialog.Bottom.Container"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/Widget.Dialog.Bottom.Title"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="是否下载试用?" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message"
            style="@style/Widget.Dialog.Bottom.Message"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/dialog_message_temp" />

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cancel"
                style="@style/Widget.Dialog.Bottom.Button"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/ok"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ok"
                style="@style/Widget.Dialog.Bottom.Button"
                android:layout_weight="1"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toBottomOf="@+id/message" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>