<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.login.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_black"
        app:title="@string/login_by_account" />

    <FrameLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow_icon"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_right_arrow"
            android:tint="@color/login_text_color" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone_number"
            style="@style/Widget.Login.EditText"
            android:layout_width="match_parent"
            android:background="@drawable/ic_edittext_selector"
            android:hint="@string/pls_input_phone_number"
            android:inputType="phone"
            android:maxLength="20"
            android:paddingVertical="10dp"
            android:paddingStart="56dp"
            android:paddingEnd="20dp"
            android:textColor="@color/login_text_color" />

        <TextView
            android:id="@+id/country"
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="+86"
            android:textColor="@color/login_text_color" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clear_phone"
            style="@style/Widget.Login.ImageButton"
            android:src="@drawable/ic_clear"
            android:visibility="invisible" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            style="@style/Widget.Login.EditText"
            android:layout_width="fill_parent"
            android:background="@drawable/ic_edittext_selector"
            android:hint="@string/pls_input_password"
            android:maxLength="20"
            android:paddingVertical="10dp"
            android:paddingStart="0dp"
            android:paddingEnd="80dp"
            android:textColor="@color/login_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clear_password"
            style="@style/Widget.Login.ImageButton"
            android:src="@drawable/ic_clear"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/password_eye"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/password_eye"
            style="@style/Widget.Login.ImageButton"
            android:src="@drawable/ic_eye_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/to_reset_password"
        style="@style/Widget.Login.Action"
        android:layout_marginHorizontal="45dp"
        android:text="@string/forget_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row2" />

    <com.scaffold.widget.ProgressButton
        android:id="@+id/login"
        style="@style/Widget.Login.ProgressButton"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_reset_password" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/weixin"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_wechat" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/weibo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_weibo" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/qq"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_qq" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>